--- a/Bootstrap/Uitlogscherm.html
+++ b/Bootstrap/Uitlogscherm.html
@@ -41,7 +41,7 @@
                 <form class="form-signin">
                     <h2 class="form-signin-heading text-muted">U bent succesvol uitgelogd!</h2>
 
-                    <a href="index.html">Terug naar de website</a>
+                    <a href="index.php">Terug naar de website</a>
                 </form>
             </div>
             <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
